yaml/00-ns-webapp-demo.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-demo
  labels:
    name: webapp-demo
