yaml/deploy-webapp-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-demo
  namespace: webapp-demo
  labels:
    app: webapp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-demo
  template:
    metadata:
      labels:
        app: webapp-demo
    spec:
      containers:
      - name: webapp-demo
        image: neilnbrown/webapp-demo4
        ports:
        - containerPort: 8080
      # imagePullSecrets:
      #   - name: regcred
